--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
     "autoprefixer": "^10.4.7",
     "core-js": "^3.6.5",
     "postcss": "^8.4.14",
