--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-router-dom": "^6.3.0",
+    "react-to-print": "^2.14.7",
     "regenerator-runtime": "0.13.7",
     "tailwindcss": "^3.0.24",
     "tslib": "^2.3.0"
